crates/forge_services/src/tools/fs/snapshots/forge_services__tools__fs__fs_write__test__fs_write_deep_directory_creation.snap
---
source: crates/forge_services/src/tools/fs/fs_write.rs
expression: normalized_result
snapshot_kind: text
---
---
path: [TEMP_DIR]/level1/level2/level3/deep.txt
operation: CREATE
---
