crates/forge_services/src/tools/fs/snapshots/forge_services__tools__fs__fs_write__test__fs_write_invalid_rust.snap
---
source: crates/forge_services/src/tools/fs/fs_write.rs
expression: normalized_output
snapshot_kind: text
---
---
path: [TEMP_DIR]/test.rs
operation: CREATE
Warning: Syntax error found in file with extension rs. Hint: Please retry in raw mode without HTML-encoding angle brackets.
---
